<resources>
    <string name="app_name">Bear Bell</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation-->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="preference_title">Setting list</string>

    <string name="play_delay_title">Continuous playback interval</string>
    <string name="play_delay_summary">Please set the continuous playback interval</string>
    <string name="play_delay_dialog">Continuous playback time</string>

    <string-array name="play_delay_entries_list">
        <item> 0 seconds later</item>
        <item> 1 seconds later</item>
        <item> 3 seconds later</item>
        <item> 5 seconds later</item>
        <item> 7 seconds later</item>
        <item>10 seconds later</item>
        <item>15 seconds later</item>
        <item>20 seconds later</item>
        <item>30 seconds later</item>
        <item>Random later</item>
    </string-array>
    <string-array name="play_delay_entryvalues_list">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>99</item>
    </string-array>

    <string name="play_volume_title">volume</string>
    <string name="play_volume_summary">Please set the volume</string>
    <string name="play_volume_dialog">Volume setting(15 levels)</string>

    <string-array name="play_volume_entries_list">
        <item>1(min)</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15(max)</item>
    </string-array>
    <string-array name="play_volume_entryvalues_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string name="emergency_title">Emergency reproduction sound</string>
    <string name="emergency_summary">Please select emergency sound reproduction\nShake your phone 50 degrees to the left and right to play</string>
    <string name="emergency_dialog">Emergency playback sound selection</string>

    <string-array name="emergency_entries_list">
        <item>none</item>
        <item>bell</item>
        <item>gunshot</item>
        <item>thunder</item>
    </string-array>
    <string-array name="emergency_entryvalues_list">
        <item>none</item>
        <item>bell</item>
        <item>gun</item>
        <item>thunder</item>
    </string-array>

    <string name="bell_kind_title">bell</string>
    <string name="bell_kind_summary">Please select bell type</string>
    <string name="bell_kind_dialog">bell</string>

    <string-array name="bell_kind_entries_list">
        <item>bell 1</item>
        <item>bell 2</item>
        <item>bell 3</item>
    </string-array>
    <string-array name="bell_kind_entryvalues_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="gun_kind_title">gunshot or explosion</string>
    <string name="gun_kind_summary">Please select type\nFirecrackers and fireworks and wolf will be activated by viewing the reward video.</string>
    <string name="gun_kind_dialog">gunshot or explosion</string>

    <string-array name="gun_kind_entries_list">
        <item>gunshot 1</item>
        <item>gunshot 2</item>
        <item>gunshot 3</item>
        <item>firecrackers</item>
        <item>firework</item>
        <item>wolf</item>

    </string-array>
    <string-array name="gun_kind_entryvalues_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="thunder_kind_title">thunder</string>
    <string name="thunder_kind_summary">Please select thunder type</string>
    <string name="thunder_kind_dialog">thunder</string>

    <string-array name="thunder_kind_entries_list">
        <item>thunder 1</item>
        <item>thunder 2</item>
        <item>thunder 3</item>
    </string-array>
    <string-array name="thunder_kind_entryvalues_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="volumeback_title">Volume return function</string>
    <string name="volumeback_summary">Restore the original volume at the end of the application</string>

    <string name="screen_type_title">Screen type</string>
    <string name="screen_type_summary">Please select Screen type</string>
    <string name="screen_type_dialog">Screen type</string>

    <string-array name="screen_type_entries_list">
        <item>Default</item>
        <item>Simple gray</item>
    </string-array>
    <string-array name="screen_type_entryvalues_list">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="sos_volume_title">SOS Volume Maximum</string>
    <string name="sos_volume_summary">Sets the SOS volume to maximum (regardless of the volume bar setting)</string>

    <string name="sos_email_title">SOS Notification Email</string>
    <string name="sos_email_summary">Register the email address that will receive your location when SOS mode is activated</string>
    <string name="sos_email_dialog">Destination Email Address</string>

    <string name="sos_email_enabled_title">Send Location Email on SOS</string>
    <string name="sos_email_enabled_summary">Automatically draft a location email to the address below when SOS mode is activated (uncheck to disable)</string>

    <string name="gps_status_title">Location Status</string>

    <string-array name="list_sound1">
        <item>Normal Sound</item>
        <item>BELL 1</item>
        <item>BELL 2</item>
        <item>BELL 3</item>
        <item>THUNDER 1</item>
        <item>THUNDER 2</item>
        <item>THUNDER 3</item>
        <item>FIRECRACKER</item>
        <item>FIREWORK</item>
        <item>WOLF</item>
        <item>PET BOTTLE</item>
    </string-array>

    <string-array name="list_sound2">
        <item>Emergency Sound</item>
        <item>BELL 1</item>
        <item>BELL 2</item>
        <item>BELL 3</item>
        <item>THUNDER 1</item>
        <item>THUNDER 2</item>
        <item>THUNDER 3</item>
        <item>FIRECRACKER</item>
        <item>FIREWORK</item>
        <item>WOLF</item>
        <item>PET BOTTLE</item>
    </string-array>

    <string-array name="list_light">
        <item>OFF</item>
        <item>ON</item>
        <item>FLASH</item>
    </string-array>

    <string-array name="list_interval">
        <item>Interval: 0s</item>
        <item>Interval: 1s</item>
        <item>Interval: 3s</item>
        <item>Interval: 5s</item>
        <item>Interval: 7s</item>
        <item>Interval:10s</item>
        <item>Interval:15s</item>
        <item>Interval:20s</item>
        <item>Interval:30s</item>
        <item>Random</item>
    </string-array>

    <string name="screen_lock">Screen is locked\n(Press and hold for 3s to unlock)</string>

</resources>